k8s/zicops-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zicops-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '180'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '180'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '180'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $csp_image_src_value "'self' data: https://googleapis.com https://storage.googleapis.com https://amplifyapp.com";
      set $csp_media_src_value "'self' data: blob: https://googleapis.com https://storage.googleapis.com https://amplifyapp.com https://*.amplifyapp.com";      
      set $csp_frame_src_value "'self' https://zicops.whereby.com https://googleapis.com https://storage.googleapis.com https://docs.google.com https://amplifyapp.com";
      set $origin_amp false;
      if ($http_origin ~* ((https://[A-Za-z0-9\-]+\.amplifyapp\.com))$ ) { set $origin_amp 'true'; }
      more_clear_headers 'Access-Control-Allow-Credentials';
      more_clear_headers 'Access-Control-Allow-Origin';
      more_clear_headers 'Access-Control-Allow-Headers';
      more_clear_headers 'Access-Control-Allow-Methods';
      more_clear_headers 'Access-Control-Expose-Headers';
      more_clear_headers 'Last-Modified';
      # To make sure Vary header is cleaned completely we need to clear it explicitely together with "gzip_vary off"
      if ($origin_amp = "true") {
        # add $http_origin to $csp_frame_src_value
        set $csp_frame_src_value "$csp_frame_src_value $http_origin";
      }      
      more_clear_headers 'Vary';
      more_set_headers "X-XSS-Protection: 1; mode=block";
      more_set_headers "X-Frame-Options: sameorigin";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Download-Options: noopen";
      more_set_headers "Surrogate-Control: no-store";
      more_set_headers "Referrer-Policy: no-referrer-when-downgrade";
      more_set_headers "X-DNS-Prefetch-Control: off";
      more_set_headers "Content-Security-Policy: default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' data: https://fonts.gstatic.com; img-src ${csp_image_src_value}; media-src ${csp_media_src_value};frame-src ${csp_frame_src_value} ;connect-src 'self' https://googleapis.com https://securetoken.googleapis.com https://storage.googleapis.com https://zicops-one.firebaseapp.com zicops-one.firebaseapp.com https://identitytoolkit.googleapis.com";
      more_set_headers "Strict-Transport-Security: max-age=15724800; includeSubDomains";
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix  
            backend:
              service:
                name: zicops-app
                port:
                  number: 80
